# my_mkdocs

./: README.md  mkdocs.yml  pyproject.toml  readthedocs.yaml  requirements.txt
MyMkdocs/docs/: about.md  diary.md  index.md  mkdocs_howto.md
docs/: diary.md  mkdocs_howto.md  sample.md
docs/IT/: index.md
docs/IT/python/django/: index.md  tips.md
sample/: mkdocs.yml
sample/docs/: index.md  sample.md
src/: dummy.py  tmp.py
