[tool.poetry]
name = "my-mkdocs"
version = "0.1.0"
description = ""
authors = ["owari-taro <taro.biwajima@gmail.com>"]
readme = "README.md"
packages = [{include = "my_mkdocs"}]

[tool.poetry.dependencies]
python = "^3.10"
mkdocs = "^1.5.2"
mkdocs-material = "^9.1.21"
mkdocstrings = {extras = ["python"], version = "^0.22.0"}
mkdocs-open-in-new-tab = "^1.0.2"
mkdocs-enumerate-headings-plugin = "^0.6.1"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
